--- a/css/WortTimer.css
+++ b/css/WortTimer.css
@@ -4,7 +4,7 @@ body {
     font-family: Lora,"Helvetica Neue",Helvetica,Arial,sans-serif;
     color: #FF74;
     background-color: #000;
-    
+    background-image:url('../img/intro-bg.jpg');
 }
 
 html {
@@ -30,7 +30,7 @@ h2 {
     font-weight: 700;
     letter-spacing: 1px;
     opacity: 1.0;
-    color: #007FFF;
+    color: #DAA520;
 }
 
 h5 {
