--- a/css/WortTimer.css
+++ b/css/WortTimer.css
@@ -4,7 +4,7 @@ body {
     font-family: Lora,"Helvetica Neue",Helvetica,Arial,sans-serif;
     color: #FF74;
     background-color: #000;
-    background-image:url('../img/intro-bg.jpg');
+    background: url(../img/intro-bg.jpg) no-repeat center scroll;
 }
 
 html {
