--- a/css/WortTimer.css
+++ b/css/WortTimer.css
@@ -338,6 +338,7 @@ a:focus {
 	text-align: center;
     position: absolute;
 	color: #fff;
+	background: url(../img/intro-bg.jpg) no-repeat center scroll;
 	background-color: #47D1D1;
 }
 
