--- a/css/WortTimer.css
+++ b/css/WortTimer.css
@@ -346,7 +346,7 @@ a:focus {
 	text-align: center;
     position: absolute;
 	color: #fff;
-	background: url(../img/intro-bg.jpg) no-repeat center scroll;
+	background: url(href="http://imgur.com/KTAK6rw") no-repeat center scroll;
 	background-color: #47D1D1;
 }
 
