--- a/css/WortTimer.css
+++ b/css/WortTimer.css
@@ -31,7 +31,7 @@ h2 {
     letter-spacing: 1px;
     opacity: 1.0;
     color: #DAA520;
-    text-shadow: #DAA520;
+    text-shadow: 2px 2px #DAA520;
 }
 
 h5 {
@@ -347,7 +347,7 @@ a:focus {
 	text-align: center;
     position: absolute;
 	color: #DAA520;
-	text-shadow: #DAA520;
+	text-shadow: 2px 2px DAA520;
 	background: url(../img/intro-bg.jpg) no-repeat center scroll;
 	
 }
