--- a/css/WortTimer.css
+++ b/css/WortTimer.css
@@ -268,6 +268,17 @@ a:focus {
 
 #firstphase{
     color: #DAA520;
+    text-shadow: 2px 2px #DAA520;
+}
+
+#secondphase{
+    color: #DAA520;
+    text-shadow: 2px 2px #DAA520;
+}
+
+#thirdphase{
+    color: #DAA520;
+    text-shadow: 2px 2px #DAA520;
 }
 
 @-webkit-keyframes pulse {    
