--- a/css/WortTimer.css
+++ b/css/WortTimer.css
@@ -13,6 +13,7 @@ html {
 }
 
 h1,
+h2,
 h3,
 h4,
 h6 {
@@ -23,7 +24,7 @@ h6 {
     letter-spacing: 1px;
 	opacity: 1.0;
 }
-h2 {
+#welcome {
     margin: 0 0 35px;
     text-transform: uppercase;
     font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
@@ -31,7 +32,7 @@ h2 {
     letter-spacing: 1px;
     opacity: 1.0;
     color: #DAA520;
-    text-shadow: 2px 2px #DAA520;
+    text-shadow: 1px #DAA520;
 }
 
 h5 {
@@ -43,15 +44,6 @@ h5 {
 	opacity: 1.0;
 }
 
-#h2 {
-    margin: 0 0 18px;
-    text-transform: uppercase;
-    font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
-    font-weight: 700;
-    letter-spacing: 1px;
-    opacity: 1.0;
-    color: white;
-    /*text-shadow: 0 0 7px #01DFD7;*/
 }
 
 p {
@@ -74,6 +66,14 @@ a {
     -moz-transition: all .2s ease-in-out;
     transition: all .2s ease-in-out;
 	text-shadow: none;
+}
+
+label {
+	font-weight: 100;
+	text-shadow: none;
+	font-family: Montserrat;
+	text-transform: uppercase;
+
 }
 
 a:hover,
@@ -179,6 +179,12 @@ a:focus {
     -o-background-size: cover;
 }
 
+
+#timersGrouped {
+
+	
+}
+
 #userID {
 	font-size: 14px;
 }
@@ -268,12 +274,12 @@ a:focus {
 
 #firstphase{
     color: #DAA520;
-    text-shadow: 2px 2px #DAA520;
+    
 }
 
 #secondphase{
     color: #DAA520;
-    text-shadow: 2px 2px #DAA520;
+    
 }
 
 #thirdphase{
