--- a/css/WortTimer.css
+++ b/css/WortTimer.css
@@ -188,6 +188,10 @@ a:focus {
 	background-color: #000;
 }
 
+#home {
+	
+}
+
 #userID {
 	font-size: 14px;
 }
@@ -271,24 +275,6 @@ a:focus {
     -moz-animation-timing-function: linear;
 }
 
-#timeInput{
-	color: #DAA520;
-}
-
-#firstphase{
-    color: #DAA520;
-    
-}
-
-#secondphase{
-    color: #DAA520;
-    
-}
-
-#thirdphase{
-    color: #DAA520;
-    text-shadow: 2px 2px #DAA520;
-}
 
 @-webkit-keyframes pulse {    
     0 {
