--- a/css/WortTimer.css
+++ b/css/WortTimer.css
@@ -21,7 +21,7 @@ h6 {
     letter-spacing: 1px;
 	opacity: 1.0;
 }
-#welcome {
+#welcome, #donemsg {
     margin: 0 0 35px;
     text-transform: uppercase;
     font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
@@ -192,7 +192,7 @@ a:focus {
 	
 }
 
-#home, #extractInput, #partialMashInput, #allGrainInput, #inputPage {
+#home, #extractInput, #partialMashInput, #allGrainInput, #inputPage, #completed, #timer {
 	background: url(../img/intro-bg.jpg) no-repeat bottom center scroll;
 	background-color: #000;
 }
